hard-gists/8a0f820261926e2f41cc/run.log
=== Docker Run Log for 8a0f820261926e2f41cc ===
Started at: Mi 29. Okt 18:06:55 CET 2025

[2025-10-29 18:06:55] START: Running container for 8a0f820261926e2f41cc
[2025-10-29 18:06:56] SUCCESS: Container b5ec9cf788432a9f8f2e193430af2638cdf3a8d26aa526191c76f33cba89bafe started for 8a0f820261926e2f41cc
=== Container logs for 8a0f820261926e2f41cc ===
  File "/snippet.py", line 645
    print dnn, "using", method
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8a0f820261926e2f41cc ===
[2025-10-29 18:06:58] INFO: Container b5ec9cf788432a9f8f2e193430af2638cdf3a8d26aa526191c76f33cba89bafe has stopped
